# internal/handler/pdf.go
@@ -5,7 +5,9 @@ import (
 	"encoding/base64"
 	"errors"
 	"io"
+	"mime/multipart"
 	"net/http"
+	"sync"
 
 	"github.com/labstack/echo/v4"
 	"github.com/one-eyed-willy/pkg/pdf"
@@ -13,17 +15,19 @@ import (
 )
 
 // CreatePdfFromHtml godoc
-// @Summary Create a pdf
-// @Description Generate a new pdf file from a html string
-// @Tags pdf
-// @Accept applcation/json
-// @Produce application/octet-stream
-// @Param html body createPdfFromHtmlRequest true "Base64 encoded string of a html"
-// @Success 200
-// @Failure 400 {object} utils.Error
-// @Failure 500 {object} utils.Error
+// @title Generate pdf
+// @summary Create a pdf
+// @description Generate a new pdf file from a html string
+// @tags pdf
+// @accept applcation/json
+// @produce application/octet-stream
+// @Param html body createPdfFromHTMLRequest true "Base64 encoded string of a html"
+// @success 200
+// @failure 400
+// @failure 500
 // @Router /pdf [post]
 func (h *Handler) GeneratePdfFromHTML(c echo.Context) (err error) {
+
 	req := &createPdfFromHTMLRequest{}
 	if err := req.bind(c); err != nil {
 		return c.JSON(http.StatusBadRequest, utils.NewError(err))
@@ -51,6 +55,45 @@ func (h *Handler) GeneratePdfFromHTML(c echo.Context) (err error) {
 	return c.Blob(http.StatusOK, MIMEApplicationPdf, <-ch)
 }
 
+func readBytes(files []*multipart.FileHeader) (filesBytes [][]byte, err error) {
+	var wg sync.WaitGroup
+	var fileBytes [][]byte
+
+	for _, file := range files {
+		src, err := file.Open()
+		if err != nil {
+			return nil, err
+		}
+		defer src.Close()
+
+		wg.Add(1)
+		go func(src multipart.File) {
+			defer wg.Done()
+			buf := new(bytes.Buffer)
+			if _, e := io.Copy(buf, src); err != nil {
+				err = e
+			}
+			fileBytes = append(fileBytes, buf.Bytes())
+		}(src)
+
+	}
+	wg.Wait()
+
+	return fileBytes, err
+}
+
+// MergePdfFiles godoc
+// @Title Merge Pdfs
+// @Summary Merge pdfs
+// @Description Merges two or more pdfs
+// @Tags pdf
+// @Accept multipart/form-data
+// @Produce application/octet-stream
+// @param files formData	file			true	"this is a pdf file"
+// @Success 200
+// @Failure 400 {object} utils.Error
+// @Failure 500 {object} utils.Error
+// @Router /pdf/merge [post]
 func (h *Handler) MergePdfs(c echo.Context) (err error) {
 	form, err := c.MultipartForm()
 	if err != nil {
@@ -62,35 +105,16 @@ func (h *Handler) MergePdfs(c echo.Context) (err error) {
 		return c.JSON(http.StatusBadRequest, utils.NewError(errors.New("You must provide at least two files to merge")))
 	}
 
-	var fileBytes [][]byte
-	for _, file := range files {
-		src, err := file.Open()
-		if err != nil {
-			return err
-		}
-		defer src.Close()
-
-		buf := new(bytes.Buffer)
-		if _, err := io.Copy(buf, src); err != nil {
-			return err
-		}
-
-		fileBytes = append(fileBytes, buf.Bytes())
+	fileBytes, err := readBytes(files)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, utils.NewError(err))
 	}
 
-	ch := make(chan []byte)
-
-	go func() {
-		defer close(ch)
-		pdf, err := pdf.Merge(fileBytes)
-		if err == nil {
-			ch <- pdf
-		}
-	}()
+	pdf, err := pdf.Merge(fileBytes)
 
 	if err != nil {
 		return c.JSON(http.StatusInternalServerError, utils.NewError(err))
 	}
 
-	return c.Blob(http.StatusOK, MIMEApplicationPdf, <-ch)
+	return c.Blob(http.StatusOK, MIMEApplicationPdf, pdf)
 }
